[package]
name = "anchors"
version = "0.4.0"
authors = ["Robert Lord <robert@lord.io>"]
edition = "2018"
description = "async incremental computations"
license = "MIT"
documentation = "https://docs.rs/anchors"
repository = "https://github.com/lord/anchors"

[lib]
bench = false

[dependencies]
typed-arena = { version = "2.0.1" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = true